--- a/Practice/SeleniumPractice/pom.xml
+++ b/Practice/SeleniumPractice/pom.xml
@@ -32,7 +32,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		
+
 		<!--
 		https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 		<dependency>
@@ -45,7 +45,7 @@
 			<artifactId>SeleniumE2EProject</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -62,12 +62,15 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- JUnit dependency -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.3</version> <!-- or latest version -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
 		</dependency>
 
 	</dependencies>
